--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
 
                 var edition = QueryString.edition;
                 if (typeof edition == "undefined" || edition == null || edition == "") {
-                    edition = "en-edition";
+                    edition = "uy-edition";
                 }
                 options.edition = edition;
 
                 var release = QueryString.release;
                 if (typeof release == "undefined" || release == null || release == "") {
-                    release = "v20150731";
+                    release = "v20160215";
                 }
                 options.release = release;
 
@@ -917,7 +917,7 @@
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
                                 <li><a href="javascript:void(0);" onclick="switchRelease('Uruguay Edition 20160215', 'uy-edition', 'v20160215', '5641000179103', 'http://104.131.195.32/api/snomed');
-                                        reloadCurrentPerspective();">UY Edition 20150808</a></li>
+                                        reloadCurrentPerspective();">UY Edition 20160215</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
