--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 document.cookie = name + "=" + value + expires + "; path=/";
             }
 
-            var enableQueriesInFullPerspective = false;
+            var enableQueriesInFullPerspective = true;
             var selectedLanguage = 'es_UY';
             var selectedFlag = 'img/flags/uy.png';
             var currentPerspective = "home";
