--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <link rel="stylesheet" href="css/popover-extra-placements.css">
         <link rel="stylesheet" href="css/animate.css">
 
-        <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.30.0.min.css">
+        <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.31.0.min.css">
 
-        <script src="snomed-interaction-components/js/snomed-interaction-components-1.30.0.min.js"></script>
-        <!--<script src="snomed-interaction-components/js/templates.js"></script>-->
+        <script src="snomed-interaction-components/js/snomed-interaction-components-1.31.0.min.js"></script>
+        <script src="snomed-interaction-components/js/templates.js"></script>
         <script src="external-libs/jquery.history.js"></script>
         <script src="external-libs/ZeroClipboard.js"></script>
 
@@ -137,21 +137,24 @@
                 options.serverUrl = mongoDetails.mongoRestServer
             }
             var manifests;
-            xhrM = $.getJSON(options.serverUrl.replace("snomed", "") + "server/releases", function (result) {
-                // nothing
-            }).done(function (result) {
-                manifests = result;
-                options.manifest = manifests[0];
-                start();
-                //console.log(result);
-            }).fail(function () {
-                $.notify("Error Terminology server not accessible!", {
-                    autoHide: false,
-                    className: "error"
-                });
+            function loadManifests(){
+                xhrM = $.getJSON(options.serverUrl.replace("snomed", "") + "server/releases", function (result) {
+                    // nothing
+                }).done(function (result) {
+                    manifests = result;
+                    options.manifest = manifests[0];
+                    start();
+                    //console.log(result);
+                }).fail(function () {
+                    $.notify("Error Terminology server not accessible!", {
+                        autoHide: false,
+                        className: "error"
+                    });
 //                alert("Error Terminolgy server not accesed");
-                console.log("fail Manifest");
-            });
+                    console.log("fail Manifest");
+                });
+            }
+
 //            $.when(xhrM).done(function () {
 //                xhr = $.getJSON("http://multibrowser.ihtsdotools.org/api/snomed".replace("snomed", "") + "server/releases", function (result) {
 //                    // nothing
@@ -873,7 +876,7 @@
             }
         </style>
     </head>
-    <body onLoad="//start();" style="height: 100%; display: block;">
+    <body onLoad="loadManifests();" style="height: 100%; display: block;">
         <nav class="navbar navbar-default  navbar-static-top" role="navigation">
             <div>
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -934,9 +937,8 @@
                                 <li><a href="javascript:void(0);" onclick="switchToResponsiveLayout(404684003, 404684003, 138875005);"><span class="i18n" data-i18n-id="i18n_responsive_perspective">Responsive (tablets, phones)</span></a></li>
                             </ul>
                         </li>
-                        <li class="navbar-btn feedback-button">
-                            <button type="button" class="btn btn-info" onclick="FreshWidget.show();
-                                    return false;">
+                        <li style="display: none;" class="navbar-btn feedback-button">
+                            <button type="button" class="btn btn-info" onclick="//FreshWidget.show();return false;">
                                 <span class="i18n" data-i18n-id="i18n_feedback">Feedback</span>
                             </button>
                         </li>
@@ -1227,49 +1229,49 @@
                 -->
 
         <!-- Using Freshdesk Widget for feedback -->
-        <script type="text/javascript" src="http://assets.freshdesk.com/widget/freshwidget.js"></script>
-        <script type="text/javascript">
-                    FreshWidget.init("", {"queryString": "&widgetType=popup&formTitle=IHTSDO+Browser+Application+Feedback%2FIssue+Reporting&searchArea=no", "backgroundImage": "http://assets.freshdesk.com/widget/help-button.png", "widgetType": "popup", "buttonType": "image", "buttonText": "Support", "buttonColor": "white", "buttonBg": "#00AADD", "alignment": "1", "offset": "-1500px", "formHeight": "500px", "url": "https://ihtsdo.freshdesk.com"});
-        </script>
+        <!--<script type="text/javascript" src="http://assets.freshdesk.com/widget/freshwidget.js"></script>-->
+        <!--<script type="text/javascript">-->
+                    <!--FreshWidget.init("", {"queryString": "&widgetType=popup&formTitle=IHTSDO+Browser+Application+Feedback%2FIssue+Reporting&searchArea=no", "backgroundImage": "http://assets.freshdesk.com/widget/help-button.png", "widgetType": "popup", "buttonType": "image", "buttonText": "Support", "buttonColor": "white", "buttonBg": "#00AADD", "alignment": "1", "offset": "-1500px", "formHeight": "500px", "url": "https://ihtsdo.freshdesk.com"});-->
+        <!--</script>-->
 
-        <script type="text/javascript">
-            var $buoop = {};
-            $buoop.ol = window.onload;
-            window.onload = function () {
-                try {
-                    if ($buoop.ol)
-                        $buoop.ol();
-                } catch (e) {
-                }
-                var e = document.createElement("script");
-                e.setAttribute("type", "text/javascript");
-                e.setAttribute("src", "//browser-update.org/update.js");
-                document.body.appendChild(e);
-            }
-        </script>
+        <!--<script type="text/javascript">-->
+            <!--var $buoop = {};-->
+            <!--$buoop.ol = window.onload;-->
+            <!--window.onload = function () {-->
+                <!--try {-->
+                    <!--if ($buoop.ol)-->
+                        <!--$buoop.ol();-->
+                <!--} catch (e) {-->
+                <!--}-->
+                <!--var e = document.createElement("script");-->
+                <!--e.setAttribute("type", "text/javascript");-->
+                <!--e.setAttribute("src", "//browser-update.org/update.js");-->
+                <!--document.body.appendChild(e);-->
+            <!--}-->
+        <!--</script>-->
         <!--Start Cookie Script-->
         <script type="text/javascript" charset="UTF-8" src="http://chs02.cookie-script.com/s/b80c8456dc1c3b2bd6652feea1124eb1.js"></script>
         <!--End Cookie Script-->
 
 
         <!-- Google Analytics script -->
-        <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        <!--<script>-->
+            <!--(function (i, s, o, g, r, a, m) {-->
+                <!--i['GoogleAnalyticsObject'] = r;-->
+                <!--i[r] = i[r] || function () {-->
+                    <!--(i[r].q = i[r].q || []).push(arguments)-->
+                <!--}, i[r].l = 1 * new Date();-->
+                <!--a = s.createElement(o),-->
+                        <!--m = s.getElementsByTagName(o)[0];-->
+                <!--a.async = 1;-->
+                <!--a.src = g;-->
+                <!--m.parentNode.insertBefore(a, m)-->
+            <!--})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');-->
 
-            ga('create', 'UA-41892858-7', 'ihtsdotools.org');
-            ga('send', 'pageview');
+            <!--ga('create', 'UA-41892858-7', 'ihtsdotools.org');-->
+            <!--ga('send', 'pageview');-->
 
-        </script>
+        <!--</script>-->
 
         <script>
             // History capture of the manual back and forward buttons
