--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 
             function start() {
                 // Read parameters
+                countryIcons["5631000179106"] = "uy";
                 $(function() {
                     $.extend($.fn.disableTextSelect = function() {
                         return this.each(function() {
