--- a/index.html
+++ b/index.html
@@ -922,8 +922,8 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Uruguay Edition 20160715', 'uy-edition', 'v20160716', '5641000179103', 'http://104.131.201.98/api/snomed');
-                                        reloadCurrentPerspective();">UY Edition 20160715</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Uruguay Edition 20160715 Beta', 'uy-edition', 'v20160716', '5641000179103', 'http://104.131.201.98/api/snomed');
+                                        reloadCurrentPerspective();">UY Edition 20160715 Beta</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1021,7 +1021,7 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Uruguay Edition 20160715', 'uy-edition', 'v20160716', '5641000179103', 'http://104.131.201.98/api/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Uruguay Edition 20160715 Beta', 'uy-edition', 'v20160716', '5641000179103', 'http://104.131.201.98/api/snomed');
                                 switchLanguage('es_UY', 'img/flags/uy.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">Uruguay edition</span></a>
                     </p>
