Creating nl daily build branch

--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
         <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.33.0.min.css">
 
         <script src="snomed-interaction-components/js/snomed-interaction-components-1.33.0.min.js"></script>
+        <script src="snomed-interaction-components/js/dailyBuildPlugin.js"></script>
         <!--<script src="snomed-interaction-components/js/templates.js"></script>-->
         <script src="external-libs/jquery.history.js"></script>
         <script src="external-libs/ZeroClipboard.js"></script>
 
         <script type="text/javascript">
-            var selectedLanguage = 'en_US';
-            var selectedFlag = 'img/flags/us.png';
+            var selectedLanguage = 'nl';
+            var selectedFlag = 'img/flags/nl.png';
             var currentPerspective = "home";
 
             var options = {
