--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>IHTSDO SNOMED CT Browser</title>
+        <title>NL Extension SNOMED CT Browser</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width">
-		<meta name="description" content="IHTSDO SNOMED CT Browser">
-		<meta name="author" content="IHTSDO">
+		<meta name="description" content="Netherlands Extension SNOMED CT Browser">
+		<meta name="author" content="termSpace">
 		<link rel="icon" type="image/png"  href="favicon.png">
 
         <script src="external-libs/jquery-2.1.0.min.js" type="text/javascript"></script>
@@ -85,8 +85,8 @@
             }
 
             var enableQueriesInFullPerspective = true;
-            var selectedLanguage = 'es_UY';
-            var selectedFlag = 'img/flags/uy.png';
+            var selectedLanguage = 'en';
+            var selectedFlag = 'img/flags/nl.png';
             var currentPerspective = "home";
 
             //It can be time consuming to load all the collections into mongo.  If you are only loading one collection
@@ -99,17 +99,17 @@
             };
 
             var options = {
-                serverUrl: "http://104.131.201.98/api/snomed",
-                edition: "uy-edition",
-                release: "v20160716",
-                releaseName: "UY Edition 20160716",
+                serverUrl: "http://nl-browser.termspace.com/api/snomed",
+                edition: "nl-edition",
+                release: "v20160930",
+                releaseName: "NL Edition 20160930",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
                 displaySynonyms: true,
                 selectedView: "inferred",
                 displayChildren: false,
-                langRefset: ["5641000179103"],
+                langRefset: ["31000146106","900000000000509007"],
                 closeButton: false,
                 collapseButton: false,
                 linkerButton: true,
@@ -213,6 +213,7 @@
             function start() {
                 // Read parameters
                 countryIcons["5631000179106"] = "uy";
+                countryIcons["11000146104"] = "nl";
                 $(function() {
                     $.extend($.fn.disableTextSelect = function() {
                         return this.each(function() {
@@ -904,7 +905,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="navbar-btn" id="edition-selector">
                             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">International Edition 20150731</span> <span class="caret"></span>
+                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">NL Edition 20160930</span> <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('International Edition 20150731', 'en-edition', 'v20150731', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
@@ -927,7 +928,7 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Uruguay Edition 20160716', 'uy-edition', 'v20160716', '5641000179103', 'http://104.131.201.98/api/snomed');
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Netherlands Edition 20160930', 'nl-edition', 'v20160930', '31000146106', 'http://nl-browser.termspace.com/api/snomed');
                                         reloadCurrentPerspective();">UY Edition 20160716</a></li>
                             </ul>
                         </li>
@@ -974,7 +975,7 @@
                             </ul>
                         </li>
                         <li>
-                            <p class="pull-right"><a href="http://www.ihtsdo.org" target="_blank"><img class="pull-right visible-lg" src="img/logo-salud-uy-small.png" alt="Salud.uy"></a>
+                            <p class="pull-right"><a href="http://www.ihtsdo.org" target="_blank"><img class="pull-right visible-lg" src="img/nictiz.png" alt="Nictiz" width="65%" height="65%" ></a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -986,10 +987,12 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1><span class="i18n" data-i18n-id="i18n_welcome_2nd">The IHTSDO SNOMED CT Browser</span></h1>
-                    <p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>
-                    <p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>
-                    <p><span class="i18n" data-i18n-id="i18n_home3">Please provide any feedback by clicking on the feedback button at the top of the page. Your feedback is essential to the evolution and improvement of this service.</span></p>
+                    <h1>The Netherlands Extension SNOMED CT Browser</h1>
+                    <p>This browser gives access to the 20160930 edition of the Netherlands Extension.</p>
+                    <br><br><br><br>
+                    <!--<p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>-->
+                    <!--<p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>-->
+                    <!--<p><span class="i18n" data-i18n-id="i18n_home3">Please provide any feedback by clicking on the feedback button at the top of the page. Your feedback is essential to the evolution and improvement of this service.</span></p>-->
                     <!--<h2><span class="i18n" data-i18n-id="i18n_international_editions">International Editions</span></h2>-->
                     <!--<p>-->
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('International Edition 20160131', 'en-edition', 'v20160131', '900000000000509007', 'http://192.241.166.137/api/snomed');-->
@@ -1026,9 +1029,9 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Uruguay Edition 20160716', 'uy-edition', 'v20160716', '5641000179103', 'http://104.131.201.98/api/snomed');
-                                switchLanguage('es_UY', 'img/flags/uy.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">Uruguay edition</span></a>
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('NL Edition 20160930', 'nl-edition', 'v20160930', '31000146106', 'http://nl-browser.termspace.com/api/snomed');
+                                switchLanguage('en', 'img/flags/nl.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/nl.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">NL edition</span></a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
@@ -1048,7 +1051,7 @@
 
                     <!--<p><span class="i18n" data-i18n-id="i18n_home4">If you would like to get involved in the development, this code is available under an Apache v2 open source license. You can also find more information on the current backlog of feedback that is up for possible development here - <a href="https://confluence.ihtsdotools.org/display/TOOLS/IHTSDO+SNOMED+CT+Browser" target="_blank">IHTSDO Browser service page</a></span></p>-->
                 </div>
-                <p><span class="i18n" data-i18n-id="i18n_home6"><span class="btn-success"><em>Releases</em></span> will allow the selection of SNOMED CT content from the International Edition or other extensions, with specific dates.</span></p>
+                <p><span class="i18n" data-i18n-id="i18n_home6"><span class="btn-success"><em>Releases</em></span> will allow the selection of SNOMED CT content with specific dates.</span></p>
                 <p><span class="i18n" data-i18n-id="i18n_home7"><span class="btn-primary"><em>Perspectives</em></span>  are pre-defined browsing layouts for specific purposes. Use the <a href="javascript:void(0);" onclick="switchToResponsiveLayout(404684003, 404684003, 138875005);">responsive perspective</a> for best results in tablets and phones.</span></p>
             </div>
             <!-- Browsing Perspective -->
@@ -1074,7 +1077,7 @@
             </div>
             <footer>
                 <p>
-                    <small><b>&copy; Salud.uy 2015</b></small>
+                    <small><b>&copy; Nictiz 2016</b></small>
                 </p>
             </footer>
 
