--- a/stats/stats-viewer-1/index.html
+++ b/stats/stats-viewer-1/index.html
@@ -200,8 +200,8 @@
                                 </ul>
                             </li>
                         </ul>
-                        <!--<ul class="nav navbar-nav navbar-right">-->
-                            <!--<li><a href="javascript:void(0)">Link</a></li>-->
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="../../index.html">Back to browser</a></li>
                             <!--<li class="dropdown">-->
                                 <!--<a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>-->
                                 <!--<ul class="dropdown-menu">-->
@@ -212,7 +212,7 @@
                                     <!--<li><a href="javascript:void(0)">Separated link</a></li>-->
                                 <!--</ul>-->
                             <!--</li>-->
-                        <!--</ul>-->
+                        </ul>
                     </div>
                 </div>
             </div>
