--- a/index.html
+++ b/index.html
@@ -949,17 +949,17 @@
                                 <span class="i18n" data-i18n-id="i18n_feedback">Feedback</span>
                             </button>
                         </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="i18n" data-i18n-id="i18n_about">Help</span> <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <!--       <li><a href="mailto:otf@ihtsdo.org?subject=feedback" target="_blank"><span class="i18n" data-i18n-id="i18n_provide_feedback">Provide feedback on this browser</span></a></li> -->
-                                <li><a href="https://github.com/IHTSDO/sct-browser-frontend" target="_blank"><span class="i18n" data-i18n-id="i18n_github">See the code on GitHub</span></a></li>
-                                <!--  <li><a href="#">About SNOMED CT</a></li> -->
-                                <li class="divider"></li>
-                                <li><a href="http://www.ihtsdotools.org" target="_blank">IHTSDO Tooling</a></li>
-                                <li><a href="http://www.ihtsdo.org" target="_blank">IHTSDO.org</a></li>
-                            </ul>
-                        </li>
+                        <!--<li class="dropdown">-->
+                            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="i18n" data-i18n-id="i18n_about">Help</span> <b class="caret"></b></a>-->
+                            <!--<ul class="dropdown-menu">-->
+                                <!--&lt;!&ndash;       <li><a href="mailto:otf@ihtsdo.org?subject=feedback" target="_blank"><span class="i18n" data-i18n-id="i18n_provide_feedback">Provide feedback on this browser</span></a></li> &ndash;&gt;-->
+                                <!--<li><a href="https://github.com/IHTSDO/sct-browser-frontend" target="_blank"><span class="i18n" data-i18n-id="i18n_github">See the code on GitHub</span></a></li>-->
+                                <!--&lt;!&ndash;  <li><a href="#">About SNOMED CT</a></li> &ndash;&gt;-->
+                                <!--<li class="divider"></li>-->
+                                <!--<li><a href="http://www.ihtsdotools.org" target="_blank">IHTSDO Tooling</a></li>-->
+                                <!--<li><a href="http://www.ihtsdo.org" target="_blank">IHTSDO.org</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span id="nav-selected-flag"></span> <b class="caret"></b></a>
                             <ul class="dropdown-menu">
