--- a/index.html
+++ b/index.html
@@ -1033,8 +1033,7 @@
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('NL Edition 20160930', 'nl-edition', 'v20160930', '31000146106', 'http://nl-browser.termspace.com/api/snomed');
                                 switchLanguage('en', 'img/flags/nl.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/nl.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">NL edition</span></a>
-                    </p>
-                    <p>
+                        &nbsp;&nbsp;&nbsp;
                         <a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View release<br>statistics and changes</a>
                     </p>
                     <!--<p>-->
