Customizing for canada

--- a/index.html
+++ b/index.html
@@ -987,9 +987,9 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1>Netherlands SNOMED CT Extension</h1>
+                    <h1>Canadian SNOMED CT Extensions</h1>
                     <h2>Terminology Browser</h2>
-                    <p>This browser gives access to the 20161031 edition of the Netherlands Extension.</p>
+                    <p>This browser gives access to the 20161031 edition of the Canadian Extensions.</p>
                     <br><br><br><br>
                     <!--<p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>-->
                     <!--<p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>-->
@@ -1080,7 +1080,7 @@
             </div>
             <footer>
                 <p>
-                    <small><b>&copy; Nictiz 2016</b></small>
+                    <small><b>&copy; Canada Health Infoway 2016</b></small>
                 </p>
             </footer>
 
