Customizing for canada

--- a/index.html
+++ b/index.html
@@ -974,8 +974,8 @@
                                 <li style="margin: 5px;"><em><span class="i18n text-muted small" data-i18n-id="i18n_translation_warning">This option only applies to the Browser. Terminology language depends on the selected edition.</span></em></li>
                             </ul>
                         </li>
-                        <li>
-                            <p class="pull-right"><a href="http://www.ihtsdo.org" target="_blank"><img class="pull-right visible-lg" src="img/nictiz.png" alt="Nictiz" width="65%" height="65%" ></a>
+                        <li class="pull-right" style="max-width: 200px;">
+                            <p ><a href="http://www.ihtsdo.org" target="_blank"><img class="" src="img/infoway-logo.png" alt="Infoway" width="90%"></a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
