Customizing for canada

--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,9 @@
                                 switchLanguage('en', 'img/flags/ca.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/ca.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">CA edition</span></a>
                         &nbsp;&nbsp;&nbsp;
-                        <a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View release<br>statistics and changes</a>
+                        <a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-2/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA French Translation<br>statistics and changes</a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
